regression(111639): Issue with simultaneous CSS animations https://bugs.webkit.org/show_bug.cgi?id=85929

Source/WebCore:

Currently, previousTimeToNextService is just saving the previous CompositeAnimation::timeToNextService
for AnimationControllerPrivate::updateAnimationTimerForRenderer, however CompositeAnimation::timeToNextService
is also called and used by updateAnimationTimer. Make sure we save the existing timeToNextService from
both places, updateAnimationTimerForRenderer and updateAnimationTimer.

Reviewed by Dean Jackson.

Test: animations/fill-mode-forwards.html

* page/animation/AnimationController.cpp:
(WebCore::AnimationControllerPrivate::AnimationControllerPrivate):
(WebCore::AnimationControllerPrivate::updateAnimationTimerForRenderer):
(WebCore::AnimationControllerPrivate::updateAnimationTimer):
* page/animation/AnimationControllerPrivate.h:
(AnimationControllerPrivate):

LayoutTests:

Reviewed by Dean Jackson.

* animations/fill-mode-forwards-expected.txt: Added.
* animations/fill-mode-forwards.html: Added.


Canonical link: https://commits.webkit.org/104151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117216 268f45cc-cd09-0410-ab3c-d52691b4dbfc