Source/WebCore/page/animation/AnimationController.cpp
@@ -57,6 +57,7 @@ AnimationControllerPrivate::AnimationControllerPrivate(Frame* frame)
     , m_animationsWaitingForStyle()
     , m_animationsWaitingForStartTimeResponse()
     , m_waitingForAsyncStartNotification(false)
+    , m_previousTimeToNextService(0)
 {
 }
 
@@ -118,7 +119,6 @@ double AnimationControllerPrivate::updateAnimations(SetChanged callSetChanged/* 
 
 void AnimationControllerPrivate::updateAnimationTimerForRenderer(RenderObject* renderer)
 {
-    static double previousTimeToNextService = 0;
     double timeToNextService = 0;
 
     RefPtr<CompositeAnimation> compAnim = m_compositeAnimations.get(renderer);
@@ -126,13 +126,13 @@ void AnimationControllerPrivate::updateAnimationTimerForRenderer(RenderObject* r
         timeToNextService = compAnim->timeToNextService();
 
     if (m_animationTimer.isActive()) {
-        if (previousTimeToNextService < timeToNextService)
+        if (m_previousTimeToNextService < timeToNextService)
             return;
 
         m_animationTimer.stop();
     }
 
-    previousTimeToNextService = timeToNextService;
+    m_previousTimeToNextService = timeToNextService;
     m_animationTimer.startOneShot(timeToNextService);
 }
 
@@ -144,6 +144,8 @@ void AnimationControllerPrivate::updateAnimationTimer(SetChanged callSetChanged/
     if (!timeToNextService) {
         if (!m_animationTimer.isActive() || m_animationTimer.repeatInterval() == 0)
             m_animationTimer.startRepeating(cAnimationTimerDelay);
+
+        m_previousTimeToNextService = timeToNextService;
         return;
     }
 
@@ -157,6 +159,7 @@ void AnimationControllerPrivate::updateAnimationTimer(SetChanged callSetChanged/
     // Otherwise, we want to start a one-shot timer so we get here again
     if (m_animationTimer.isActive())
         m_animationTimer.stop();
+    m_previousTimeToNextService = timeToNextService;
     m_animationTimer.startOneShot(timeToNextService);
 }
 
